@startuml
Abstract BankAccount{
- int id
- double balance
+ deposit(double amount)
+ extract(double amount)
+ double getBalance()
# canExtract(double amount)
}

class CheckingAccount{
+ CheckingAccount(int id, double max)
#canExtract(double amount)
}

class SavingsAccount{
+ CheckingAccount(int id)
#canExtract(double amount)
}

BankAccount <|-- CheckingAccount
BankAccount <|-- SavingsAccount
@enduml